Fixed Image Styling So it doesn't stretch

--- a/client/src/components/pages/ProjectPage/Comments/CommentList/Comment/Comment.scss
+++ b/client/src/components/pages/ProjectPage/Comments/CommentList/Comment/Comment.scss
@@ -15,6 +15,8 @@
     .profile-icon {
         width:40px;
         height:40px;
+        object-fit: cover;
+        object-position: 50% 50%;
         margin: 1px 1em 0 0;
         border-radius: 50%;
     }
